--- a/package.json
+++ b/package.json
@@ -2,9 +2,15 @@
   "name": "booksapimern",
   "version": "1.0.0",
   "description": "Google Books Search",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "jest --verbose test/*"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -21,7 +27,11 @@
   },
   "homepage": "https://github.com/Sanganu/booksapimern#readme",
   "dependencies": {
+    "axios": "^0.21.0",
+    "concurrently": "^5.3.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.5"
+    "if-env": "^1.0.4",
+    "mongoose": "^5.11.5"
   }
 }
