--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
-    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
-    "client": "cd client && npm run start",
-    "install": "cd client && npm install",
-    "build": "cd client && npm run build",
+    "start:dev": "concurrently \"nodemon --ignore 'userside/*'\" \"npm run userside\"",
+    "userside": "cd userside && npm run start",
+    "install": "cd userside && npm install",
+    "build": "cd userside && npm run build",
     "heroku-postbuild": "npm run build"
   },
   "repository": {
@@ -32,6 +32,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "mongoose": "^5.11.5"
+    "mongoose": "^5.11.5",
+    "morgan": "^1.10.0",
+    "youtube-node": "^1.3.3",
+    "youtube-search": "^1.1.4"
   }
 }
